Fix leak in message compose window (and probably other places) by breaking a global->controllers->controller->global cycle resulting from having implementations of nsIController in JavaScript.  b=56703  r=waterson@netscape.com  sr=brendan@mozilla.org